static/css/style.css
.page { width:42em; margin: 0 auto; margin-top: 3em; margin-bottom: 3em; }

h2 { font-family:sans-serif; font-size:1.3em; border-bottom:1px solid #BBB; }

input { margin: 1em 0; }

.zeropoint { z-index: 10; }
.viewport { height:500px; width:800px; overflow:hidden; border:1px #CCC solid; text-align:center; }

.proof { text-align:center; }
.proof { display:inline-block; white-space:nowrap; padding-left: 2.4em; padding-top:0.5em; padding-bottom:0.3em;margin-top:0.5em;margin-bottom:0.4em;}
.proof table { width:100%; border-collapse:collapse; margin: auto; }
.proof td { padding:0; border:0; margin:0; text-align:center; }
.proof .sequent { display: inline-block; }
.proof .sibling { display: inline-block; vertical-align:bottom; }
.proof .tagBox { font-size: 0.8em; color: #444; vertical-align: top; width: 1.5em; padding-right:2em; }
.proof .tagBox .tag { position:relative; top:-0.6em;}
.proof .inference { border-top: 1px solid #000; }
.proof .main-formula:after { content: ' '; }
.proof .commaList { float: left; list-style: none; margin: 0; padding: 0; }
.proof .commaList li { float: left; margin: 0 0.1em;}
.proof .commaList li:after { content: ','; }
.proof .commaList li:last-child:after { content: ''; }
.proof .turnstile { margin: 0 0.3em; float: left; }
.proof .turnstile:hover { background: #FDD; cursor:pointer; }
.proof .primaryExpr:hover { background: #DDF; cursor:pointer; }
.proof .main-formula:hover .primaryOperator { background: #005; color: #FFF; }
.proof .expand { font-size: 0.6em; color: #999; }
.proof .expand:hover { background: #005; color: #FFF; cursor:pointer; }

.error, .errorStyle {margin-top:-0.5em; border:1px solid #900; padding:0.4em 2em; background: #F99; }
.error input, .errorStyle input {border:0; background:transparent; text-decoration:underline; color:#900; cursor:pointer;}

.rules {margin:1em auto;}
.centerTable {margin:1em auto;}

.proofIsDone .proof {background:#CFC;}
.green {background:#CFC;}
.proofIsPending .proof {background:#FCFCBB;}
.proofIsIncomplete .proof {}

.explained {border-bottom:dotted 1px #444;}
.proof .explained{border-bottom:0;}

sup, sub { font-size:0.6em; }
sup { vertical-align: top; }

.arrow { color: #b3b9cd; }
.arrow:hover { color: #003eff; cursor:pointer; }

.syntax td:nth-child(1) { text-align: right; padding-right: 10px;}
.syntax td:nth-child(2) { text-align: left;}

.cell {vertical-align: top;}

.no-margin { margin: 0; }

.code { font-family: "Courier New", sans-serif; }
.binary-operator { margin-left: 3px; margin-right: 3px; }
.neutral-element { font-family: "Courier New", sans-serif; }
.index { vertical-align: sub; font-size: .7em; }
.flip { transform: scale(-1, -1); display: inline-block; }
.bold { font-weight: bold; }
.italic { font-style: italic; }
.example { font-style: italic; margin-right: 2em; }

.pedagogic-error {
    display: inline-block;
    padding: 10px;
    margin: 10px 0;
    color: #856404;
    background-color: #fff3cd;
    border: 1px solid #ffeeba;
    border-radius: .25rem;
}

.message {
    display: inline-block;
}

.close-button {
    display: inline-block;
    cursor: pointer;
    margin-left: 10px;
}

